--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -27,7 +27,7 @@ h3{
 }
 
 /* main page */
-.grid-container-main{
+/* .grid-container-main{
     height: 100vh;
     display: grid;
     grid-template-rows: 400px 200px;
@@ -40,12 +40,6 @@ h3{
     margin-right: 20px;
     margin-top: 150px;
 }
-
-/* .main-heart{
-    margin-top: 100px;
-    font-size: 50px;
-    margin-left: 20px;
-} */
 
 .main-photo{
     text-align: center;
@@ -88,11 +82,12 @@ h3{
 
 .main-content{
     margin-top: 100px;
-}
+} */
 
-/* about page */
 
-.about-content{
+/* all pages */
+
+.content{
     margin: 0 30px;
 }
 
@@ -106,6 +101,123 @@ h3{
 .margin-zero{
     margin-bottom: -3px;
 }
+
+.margin-thirty{
+    margin-top: 30px;
+}
+
+.margin-thirty-bottom{
+    margin-bottom: 30px;
+}
+
+.margin-thirty-sides{
+    margin: 0 30px;
+}
+
+.margin-sixty{
+    margin-top: 60px;
+}
+
+.header-font{
+    font-size: 13px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    color: #000000;
+}
+
+.blurb-font{
+    letter-spacing: 1px;
+    line-height: 18px;
+}
+
+.text-font{
+    letter-spacing: 1px;
+    line-height: 18px;
+}
+
+.center{
+    text-align: center;
+}
+
+.justify{
+    text-align: justify;
+}
+
+.no-decoration{
+    text-decoration: none;
+    color: black;
+}
+
+.socials-style{
+    margin-top: 30px;
+    text-align: center;
+}
+
+.fa {
+    font-size: 1.5em !important;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+    margin: 10px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+    /* color: #ffd1dc; */
+}
+
+.fa-envelope {
+    background: #ffffff;
+    color: grey;
+}
+
+.fa-github {
+    background: #ffffff;
+    color: grey;
+}
+
+.fa-instagram {
+    background: #ffffff;
+    color: grey;
+}
+
+.fa-linkedin {
+    background: #ffffff;
+    color: grey;
+}
+
+.ending-style{
+    margin-bottom: 45px;
+}
+
+.container{
+    position: relative;
+    text-align: center;
+    color: #000000;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+.bottom-left{
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+}
+
+.bottom-right{
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+}
+
+.photo{
+    width: 100%;
+    height: 100%;
+}
+
+
+/* home page */
 
 .photo-grid{
     margin: 30px 0 9px 0;
@@ -153,21 +265,6 @@ h3{
     object-fit: cover;
 }
 
-.container{
-    position: relative;
-    text-align: center;
-    color: #000000;
-    font-size: 15px;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-}
-
-.bottom-left{
-    position: absolute;
-    bottom: 8px;
-    left: 16px;
-}
-
 .accordion{
     font-size: 13px;
     text-transform: uppercase;
@@ -192,6 +289,18 @@ h3{
     letter-spacing: 1px;
     line-height: 18px;
   }
+
+.accordion:after {
+  content: '\002B';
+  font-size: 13px;
+  font-family: myriad-pro, sans-serif;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
+}
 
 hr{
     border: none;
@@ -304,22 +413,145 @@ hr{
     font-style: italic;
 }
 
+/* interests page */
+.interests-blurb{
+    margin-top: 30px;
+    text-align: justify;
+}
+
+.intro-grid{
+    margin: 30px 0 9px 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 0;
+}
+
+.intro-grid__item--1{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    object-fit: cover;
+}
+
+.intro-grid__item--2{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    object-fit: cover;
+}
+
+.intro-grid__item--3{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    object-fit: cover;
+}
+
+.intro-grid__item--4{
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    object-fit: cover;
+}
+
+.photo-text-grid{
+    margin: 30px 0 9px 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 40vw;
+    grid-gap: 30px;
+}
+
+.photo-text-grid__item--1{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    object-fit: cover;
+}
+
+.photo-text-grid__item--2{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    object-fit: cover;
+}
+
+.images{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.margin-fifty-sides{
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+.memory-grid{
+    margin: 200px 50px 200px 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 10vw 10vw 10vw 10vw 10vw;
+    grid-gap: 0;
+}
+
+.memory-grid__item--1{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 5;
+    object-fit: cover;
+}
+
+.memory-grid__item--2{
+    grid-column-start: 4;
+    grid-column-end: 6;
+    grid-row-start: 4;
+    grid-row-end: 6;
+    object-fit: cover;
+}
+
+.great-vibes-font{
+    font-family: 'Great Vibes';
+    font-size: 50px;
+    letter-spacing: 10px;
+}
+
+.memory-background{
+    background-color: rgb(240, 240, 240);
+    padding: 0 10px;
+}
+
+/* resume page */
+.resume-style{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+
 /* Navbar */
 
-.nav-container {
+.nav-container{
     width: 100%;
     background: #ffffff;
     padding: 20px 0;
 }
 
-nav {
+nav{
     max-width: 1720px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
 }
 
-.left-menu {
+.left-menu{
     margin-left: 20px;
     grid-column: 1;
     align-self: center;
@@ -333,7 +565,7 @@ nav {
     margin: 10px;
 }
 
-.logo {
+.logo{
     grid-column: 2;
     text-decoration: none;
     font-size: 20px;
@@ -343,11 +575,11 @@ nav {
     align-self: center;
 }
 
-#nav-toggle, .burger-menu {
+#nav-toggle, .burger-menu{
     display: none;
 }
 
-@media only screen and (max-width: 1350px) {
+@media only screen and (max-width: 1350px){
     .burger-menu{
         display: inline-block;
     }
@@ -362,7 +594,7 @@ nav {
     margin-top: 2px;
 }
 
-@media only screen and (max-width: 1350px) {
+@media only screen and (max-width: 1350px){
     .burger-menu {
         display: inline-block;
     }
