--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -647,6 +647,30 @@ hr{
     object-fit: cover;
 }
 
+.photoo-text-grid{
+    margin: 30px 0 9px 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 40vw;
+    grid-gap: 30px;
+}
+
+.photoo-text-grid__item--1{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    object-fit: cover;
+}
+
+.photoo-text-grid__item--2{
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    object-fit: cover;
+}
+
 .images{
     width: 100%;
     height: 100%;
@@ -705,6 +729,10 @@ hr{
 
 .vert-align{
     align-items: center;
+}
+
+.other-vert-align{
+    align-self: center;
 }
 
 .info-text-font{
@@ -922,4 +950,44 @@ nav{
     margin-top: 15px;
     grid-row: 2;
     }
+}
+
+@media only screen and (max-width: 768px) {
+.instagram-grid {
+    display: block; 
+    margin: 0 50px;
+}
+.instagram-photo {
+    margin-bottom: 30px;
+}
+.projects-grid {
+    display: grid;
+    margin: 0 0 20px 0;
+    grid-template-rows: 40vw;
+}
+
+.projects-grid{
+    display: block;
+}
+
+.project-photos-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 20vw 20vw 20vw 20vw;
+    grid-gap: 0;
+}
+
+.project-photos-grid__item--1{
+    grid-column-start: 2;
+    grid-column-end:4;
+    grid-row-start: 1;
+    grid-row-end: 4;
+}
+
+.project-photos-grid__item--2{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 5;
+}
 }
