--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -950,6 +950,13 @@ nav{
     margin-top: 15px;
     grid-row: 2;
     }
+    .instagram-grid-mobile {
+        display: block; 
+        margin: 0 50px;
+    }
+    .instagram-grid-mobile .instagram-photo {
+            margin-bottom: 30px;
+    }
 }
 
 @media only screen and (max-width: 768px) {
