--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -92,8 +92,6 @@ h3{
 }
 
 .header-photo{
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
     width: 100%;
     height: 100%;
 }
@@ -266,6 +264,11 @@ h3{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.photo-black-white {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
 }
 
 .photo-grid__item--1{
@@ -946,16 +949,18 @@ nav{
     }
 
     #nav-toggle:checked ~ .left-menu{
-    display: grid;
-    margin-top: 15px;
-    grid-row: 2;
+        display: grid;
+        margin-top: 15px;
+        grid-row: 2;
     }
+
     .instagram-grid-mobile {
-        display: block; 
+        display: block;
         margin: 0 50px;
     }
+    
     .instagram-grid-mobile .instagram-photo {
-            margin-bottom: 50px;
+        margin-bottom: 30px;
     }
 }
 
@@ -965,7 +970,7 @@ nav{
     margin: 0 50px;
 }
 .instagram-photo {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 .projects-grid {
     display: grid;
