projects page and photo updates

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -509,7 +509,7 @@ hr{
 }
 
 .projects-info-style{
-    margin-top: 5.5vw;
+    /* margin-top: 5.5vw; */
     font-size: 1.5vw;
     letter-spacing: 0.3vw;
     line-height: 3vw;
