--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,8 +1,17 @@
+@font-face{
+    font-family: theboldfont;
+    src: url(theboldfont.ttf);
+}
+
 body{
     margin: 0;
     font-family: myriad-pro, sans-serif;
     font-style: normal;
     font-size: 12px;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 h1{
@@ -95,14 +104,11 @@ h3{
     width: 100%;
     height: calc(100vh - 63.2px - 30px);
     object-fit: cover;
+    /* filter: blur(4px); */
 }
 
 .padding-thirty{
     padding: 30px;
-}
-
-.margin-zero{
-    margin-bottom: -3px;
 }
 
 .margin-thirty{
@@ -173,6 +179,20 @@ h3{
 .socials-style{
     margin-top: 30px;
     text-align: center;
+}
+
+.main-header-font{
+    font-size: 45px;
+    color: #fff;
+    /* font-family: theboldfont; */
+    font-family: myriad-pro, sans-serif;
+    letter-spacing: 20px;
+    font-weight: 500;
+}
+
+.main-line{
+    border: 2px solid white;
+    opacity: 1;
 }
 
 .fa {
@@ -248,10 +268,98 @@ h3{
 }
 
 
+/* arrow */
+.arrow-container {
+    position: absolute;
+    bottom: 10px;
+    left: calc(50% + 28px);
+    transform: translate(-50%, -50%);
+  }
+
+  .chevron {
+    position: absolute;
+    width: 28px;
+    height: 8px;
+    opacity: 0;
+    transform: scale3d(0.5, 0.5, 0.5);
+    animation: move 3s ease-out infinite;
+  }
+  
+  .chevron:first-child {
+    animation: move 3s ease-out 1s infinite;
+  }
+  
+  .chevron:nth-child(2) {
+    animation: move 3s ease-out 2s infinite;
+  }
+  
+  .chevron:before,
+  .chevron:after {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 51%;
+    background: #fff;
+  }
+  
+  .chevron:before {
+    left: 0;
+    transform: skew(0deg, 30deg);
+  }
+  
+  .chevron:after {
+    right: 0;
+    width: 50%;
+    transform: skew(0deg, -30deg);
+  }
+  
+  @keyframes move {
+    25% {
+      opacity: 1;
+  
+    }
+    33% {
+      opacity: 1;
+      transform: translateY(30px);
+    }
+    67% {
+      opacity: 1;
+      transform: translateY(40px);
+    }
+    100% {
+      opacity: 0;
+      transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+    }
+  }
+  
+  .arrow-text {
+    display: block;
+    margin-top: 75px;
+    margin-left: -30px;
+    font-family: myriad-pro, sans-serif;
+    font-style: normal;
+    letter-spacing: 2px;
+    font-size: 12px;
+    color: #fff;
+    text-transform: uppercase;
+    white-space: nowrap;
+    opacity: .25;
+    animation: pulse 2s linear alternate infinite;
+  }
+  
+  @keyframes pulse {
+    to {
+      opacity: 1;
+    }
+  }
+
+
 /* home page */
 
 .photo-grid{
-    margin: 30px 0 9px 0;
+    margin: 0 0 9px 0;
+    padding-top: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 20vw 20vw 20vw;
