--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -926,7 +926,7 @@ hr{
     text-align: right;
 }
 
-input[type=text-important]{
+input[type=text], input[type=email]{
     width: 85%;
     border: 0;
     border-bottom: 1px solid #ccc;
@@ -939,7 +939,7 @@ input[type=text-important]{
     letter-spacing: 2px;
 }
 
-input[type=text]{
+input[type=tel], #subject{
     width: 100%;
     border: 0;
     border-bottom: 1px solid #ccc;
@@ -967,7 +967,7 @@ textarea {
     padding-top: 10px;
 }
   
-input[type=submit] {
+button[name=submit] {
     background-color: white;
     border: 1px solid #ccc;
     color: black;
